--- a/latihan.html
+++ b/latihan.html
@@ -55,6 +55,6 @@ BUAT LINK
 <br>
 
 <img>
-<a href="https://kompas.com"> <img src="Cuplikan layar 2024-12-17 130045.png"  width="30" height="40" alt="putra">
+<img src="Cuplikan layar 2024-12-17 130045.png"  width="30" height="40" alt="putra">
 </body>
 </html>
